# keyple.keyple-plugin-pcsc-cpp-lib

./: .cppcheck.suppress  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  PUBLISHERS.yml  list_versions.md
2.4.2/: _card_terminal_8cpp.html  _card_terminal_8cpp__incl.map  _card_terminal_8cpp__incl.md5  _card_terminal_8cpp_source.html  _pcsc_plugin_adapter_8cpp.html  _pcsc_plugin_adapter_8cpp__incl.map  _pcsc_plugin_adapter_8cpp_source.html  _pcsc_plugin_factory_adapter_8cpp.html  _pcsc_plugin_factory_adapter_8cpp_source.html  _pcsc_plugin_factory_builder_8cpp.html  _pcsc_plugin_factory_builder_8cpp__incl.map  _pcsc_plugin_factory_builder_8cpp__incl.md5  _pcsc_plugin_factory_builder_8cpp_source.html  _pcsc_reader_8cpp.html  _pcsc_reader_8cpp_source.html  _pcsc_reader_adapter_8cpp.html  _pcsc_reader_adapter_8cpp__incl.map  _pcsc_reader_adapter_8cpp_source.html  _pcsc_supported_contact_protocol_8cpp.html  _pcsc_supported_contact_protocol_8cpp__incl.md5  _pcsc_supported_contact_protocol_8cpp_source.html  _pcsc_supported_contactless_protocol_8cpp.html  _pcsc_supported_contactless_protocol_8cpp__incl.map  _pcsc_supported_contactless_protocol_8cpp_source.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_fdf2b31f12d3ebb2f617242d0514024b.html  files.html  (+11 more)
2.4.2-SNAPSHOT/: _card_terminal_8cpp.html  _card_terminal_8cpp_source.html  _pcsc_plugin_adapter_8cpp.html  _pcsc_plugin_adapter_8cpp__incl.md5  _pcsc_plugin_adapter_8cpp_source.html  _pcsc_plugin_factory_adapter_8cpp.html  _pcsc_plugin_factory_adapter_8cpp_source.html  _pcsc_plugin_factory_builder_8cpp.html  _pcsc_plugin_factory_builder_8cpp_source.html  _pcsc_reader_8cpp.html  _pcsc_reader_8cpp_source.html  _pcsc_reader_adapter_8cpp.html  _pcsc_reader_adapter_8cpp__incl.md5  _pcsc_reader_adapter_8cpp_source.html  _pcsc_supported_contact_protocol_8cpp.html  _pcsc_supported_contact_protocol_8cpp_source.html  _pcsc_supported_contactless_protocol_8cpp.html  _pcsc_supported_contactless_protocol_8cpp_source.html  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_fdf2b31f12d3ebb2f617242d0514024b.html  files.html  graph_legend.html  index.html  namespacekeyple.html  namespacekeyple_1_1plugin.html  namespacekeyple_1_1plugin_1_1pcsc.html  namespacekeyple_1_1plugin_1_1pcsc_1_1cpp.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html
src/main/: CMakeLists.txt  CMakeLists.txt.keyple-common  CMakeLists.txt.keyple-plugin  CMakeLists.txt.keyple-util  PcscCardCommunicationProtocol.cpp  PcscPluginAdapter.cpp  PcscPluginFactoryAdapter.cpp  PcscPluginFactoryBuilder.cpp  PcscReader.cpp  PcscReaderAdapter.cpp  PcscSupportedContactlessProtocol.cpp  mainpage.dox
src/main/cpp/: Card.cpp  CardChannel.cpp  CardTerminal.cpp  CardTerminals.cpp  PcscUtils.hpp  TerminalFactory.cpp
(+122 files in other folders)
